# src/generated-runtime/model/index.js
@@ -124,6 +124,9 @@ export * from './createDatabaseRequestDatabaseType';
 export * from './createDatabaseRequestPgVersion';
 export * from './createDatabaseRequestRegion';
 export * from './createDatabaseRestoreRequest';
+export * from './createDurableFunctionBody';
+export * from './createDurableFunctionBodyRuntime';
+export * from './createDurableFunctionBodyVariableScope';
 export * from './createEmailTemplateRequest';
 export * from './createEmailTemplateRequestTemplateType';
 export * from './createFrontendBody';
@@ -131,6 +134,7 @@ export * from './createFrontendBodyFramework';
 export * from './createFrontendCustomDomainRequest';
 export * from './createFunctionBody';
 export * from './createFunctionBodyRuntime';
+export * from './createFunctionBodyVariableScope';
 export * from './createFunctionsBatchBody';
 export * from './createFunctionSchedulerRequest';
 export * from './createFunctionSchedulerRequestPayload';
@@ -200,6 +204,9 @@ export * from './deviceAuthorizationResponse';
 export * from './durableExecution';
 export * from './durableExecutionError';
 export * from './durableExecutionStatus';
+export * from './durableFunction';
+export * from './durableFunctionConfig';
+export * from './durableFunctionStatus';
 export * from './emailTemplate';
 export * from './emailTemplateTemplateType';
 export * from './endingBeforeParameter';
@@ -235,6 +242,7 @@ export * from './functionInvocationMode';
 export * from './functionInvocationRequest';
 export * from './functionInvocationRequestPayload';
 export * from './functionInvocationResponse';
+export * from './functionKind';
 export * from './functionOpenapiSpec';
 export * from './functionRegion';
 export * from './functionRuntimeDeployment';
@@ -290,6 +298,9 @@ export * from './listDatabaseRegions200Item';
 export * from './listDatabasesParams';
 export * from './listDatabasesStatus';
 export * from './listDeploymentsParams';
+export * from './listDurableExecutionsParams';
+export * from './listDurableFunctionDeploymentsParams';
+export * from './listDurableFunctionsParams';
 export * from './listEmailTemplates200';
 export * from './listFrontendDeploymentsParams';
 export * from './listFrontendsParams';
@@ -349,6 +360,8 @@ export * from './offsetParameter';
 export * from './pageParameter';
 export * from './paginatedAuthUsers';
 export * from './paginatedDatabases';
+export * from './paginatedDurableExecutions';
+export * from './paginatedDurableFunctions';
 export * from './paginatedFrontendDeployments';
 export * from './paginatedFrontends';
 export * from './paginatedFunctionDeployments';
@@ -400,6 +413,7 @@ export * from './projectConfigEmailTemplates';
 export * from './projectConfigFrontend';
 export * from './projectConfigFunction';
 export * from './projectConfigFunctionOpenapiSpec';
+export * from './projectConfigFunctionVariableScope';
 export * from './projectConfigHostedPage';
 export * from './projectConfigHostedPages';
 export * from './projectConfigMissingResource';
